--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "todomvc-app-css": "^2.4.2",
+    "uuidv4": "^6.2.12",
     "vue": "^2.6.14"
   },
   "devDependencies": {
